--- a/event-detail.html
+++ b/event-detail.html
@@ -84,39 +84,52 @@
         }
     </style>
 </head>
+
 <body class="bg-background-light dark:bg-background-dark font-display antialiased min-h-screen flex flex-col overflow-x-hidden text-gray-900 dark:text-white">
-    <nav class="sticky top-0 z-50 w-full bg-background-light/90 dark:bg-background-dark/90 backdrop-blur-md border-b border-gray-200 dark:border-[#29382f]">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between h-16 sm:h-20">
-                <div class="flex items-center gap-3">
-                    <div class="size-8 text-primary">
-                        <svg class="w-full h-full" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M42.1739 20.1739L27.8261 5.82609C29.1366 7.13663 28.3989 10.1876 26.2002 13.7654C24.8538 15.9564 22.9595 18.3449 20.6522 20.6522C18.3449 22.9595 15.9564 24.8538 13.7654 26.2002C10.1876 28.3989 7.13663 29.1366 5.82609 27.8261L20.1739 42.1739C21.4845 43.4845 24.5355 42.7467 28.1133 40.548C30.3042 39.2016 32.6927 37.3073 35 35C37.3073 32.6927 39.2016 30.3042 40.548 28.1133C42.7467 24.5355 43.4845 21.4845 42.1739 20.1739Z" fill="currentColor"></path>
-                            <path clip-rule="evenodd" d="M7.24189 26.4066C7.31369 26.4411 7.64204 26.5637 8.52504 26.3738C9.59462 26.1438 11.0343 25.5311 12.7183 24.4963C14.7583 23.2426 17.0256 21.4503 19.238 19.238C21.4503 17.0256 23.2426 14.7583 24.4963 12.7183C25.5311 11.0343 26.1438 9.59463 26.3738 8.52504C26.5637 7.64204 26.4411 7.31369 26.4066 7.24189C26.345 7.21246 26.143 7.14535 25.6664 7.1918C24.9745 7.25925 23.9954 7.5498 22.7699 8.14278C20.3369 9.32007 17.3369 11.4915 14.4142 14.4142C11.4915 17.3369 9.32007 20.3369 8.14278 22.7699C7.5498 23.9954 7.25925 24.9745 7.1918 25.6664C7.14534 26.143 7.21246 26.345 7.24189 26.4066ZM29.9001 10.7285C29.4519 12.0322 28.7617 13.4172 27.9042 14.8126C26.465 17.1544 24.4686 19.6641 22.0664 22.0664C19.6641 24.4686 17.1544 26.465 14.8126 27.9042C13.4172 28.7617 12.0322 29.4519 10.7285 29.9001L21.5754 40.747C21.6001 40.7606 21.8995 40.931 22.8729 40.7217C23.9424 40.4916 25.3821 39.879 27.0661 38.8441C29.1062 37.5904 31.3734 35.7982 33.5858 33.5858C35.7982 31.3734 37.5904 29.1062 38.8441 27.0661C39.879 25.3821 40.4916 23.9425 40.7216 22.8729C40.931 21.8995 40.7606 21.6001 40.747 21.5754L29.9001 10.7285ZM29.2403 4.41187L43.5881 18.7597C44.9757 20.1473 44.9743 22.1235 44.6322 23.7139C44.2714 25.3919 43.4158 27.2666 42.252 29.1604C40.8128 31.5022 38.8165 34.012 36.4142 36.4142C34.012 38.8165 31.5022 40.8128 29.1604 42.252C27.2666 43.4158 25.3919 44.2714 23.7139 44.6322C22.1235 44.9743 20.1473 44.9757 18.7597 43.5881L4.41187 29.2403C3.29027 28.1187 3.08209 26.5973 3.21067 25.2783C3.34099 23.9415 3.8369 22.4852 4.54214 21.0277C5.96129 18.0948 8.43335 14.7382 11.5858 11.5858C14.7382 8.43335 18.0948 5.9613 21.0277 4.54214C22.4852 3.8369 23.9415 3.34099 25.2783 3.21067C26.5973 3.08209 28.1187 3.29028 29.2403 4.41187Z" fill="currentColor" fill-rule="evenodd"></path></svg>
-                    </div>
-                    <span class="text-lg font-bold tracking-tight text-gray-900 dark:text-white hidden sm:block">VN-UK</span>
-                </div>
-                <div id="nav-menu" class="hidden md:flex items-center gap-8">
-                    <!-- JS will render student nav here -->
-                </div>
-                <div class="flex items-center gap-3">
-                    <button class="flex items-center justify-center size-10 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
-                        <span class="material-symbols-outlined text-[20px]">notifications</span>
-                    </button>
-                    <button class="flex items-center justify-center size-10 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
-                        <span class="material-symbols-outlined text-[20px]">settings</span>
-                    </button>
-                    <button class="flex items-center justify-center size-10 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
-                        <span class="material-symbols-outlined text-[20px] theme-toggle-icon">dark_mode</span>
-                    </button>
-                    <div class="w-10 h-10 rounded-full bg-cover bg-center border-2 border-surface-dark dark:border-white/10 ml-2" role="img" aria-label="User profile avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDrr6rBkz1E0BDOWMwVLhOhrdjFKE6VdAZ2VpJ1SYnf-pHNiRz5R4hsrWL0fvIyoJMnjKkSh_HXvIg1jHj6fEwKKWX5hsYET-73k1nQeNAHNePVqRLO6Pv4877sIww9Kt0toBSaUzkAkBNKPDojBKd0rbS4SSHhnXuCIVkbOLM6-iG7FIzzs1k7BewkVEP18i-uZOdwkjR18O8R-Wkmes5ulpfk6RshFIQO5BLr2O0MALOJkrDLN3r3ZOArDTTdtTX5pHOkjEv-GVU');"></div>
-                    <button id="sidebar-toggle-btn" class="md:hidden flex items-center justify-center size-10 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
-                        <span class="material-symbols-outlined text-[20px]">menu</span>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <header class="sticky top-0 z-50 flex items-center justify-between border-b border-solid border-slate-200 dark:border-[#29382f] bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md px-6 py-4 lg:px-10">
+  <div class="flex items-center gap-4">
+    <div class="flex h-10 w-10 items-center justify-center rounded-full bg-primary text-background-dark">
+      <span class="material-symbols-outlined">school</span>
+    </div>
+    <h2 class="text-lg font-bold leading-tight tracking-[-0.015em] hidden sm:block">
+      VN-UK
+    </h2>
+  </div>
+
+  <nav id="nav-menu" class="hidden md:flex items-center justify-center gap-8 flex-1">
+    <a href="../home.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Home</a>
+    <a href="my-event.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Events</a>
+    <a href="my-journey.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Journey</a>
+    <a href="profile.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Profile</a>
+  </nav>
+
+  <div class="flex gap-3 relative">
+    <button class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+      <span class="material-symbols-outlined text-[20px]">notifications</span>
+    </button>
+    <button id="settings-btn" class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+      <span class="material-symbols-outlined text-[20px]">settings</span>
+    </button>
+    <div id="settings-dropdown" class="hidden">
+      <button id="logout-btn" class="block w-full text-left px-4 py-2 text-sm text-red-500 hover:bg-red-500/10">
+        Logout
+      </button>
+    </div>
+    <button class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+      <span class="material-symbols-outlined text-[20px] theme-toggle-icon">light_mode</span>
+    </button>
+
+    <div class="h-8 w-px bg-gray-200 dark:bg-white/10 mx-2"></div>
+
+<!-- Avatar tròn xanh với chữ cái đầu tên người dùng -->
+<div class="flex items-center justify-center">
+  <div id="user-avatar-initial" 
+       class="size-10 rounded-full bg-primary text-background-dark flex items-center justify-center text-xl font-bold shadow-glow select-none">
+    A
+  </div>
+</div>
+  </div>
+</header>
 
     <!-- Admin Sidebar -->
     <aside id="admin-sidebar" class="flex-col hidden z-40">
