--- a/home.html
+++ b/home.html
@@ -76,27 +76,23 @@
       position: fixed;
       left: 0;
       top: 5rem;
-      /* dùng 5rem thống nhất với header */
       height: calc(100vh - 5rem);
       width: 250px;
-      /* default width */
       background-color: #112117 !important;
-      /* màu thống nhất */
       border-right: 1px solid #1c2620;
       display: flex;
-      /* mặc định ẩn trên mobile */
       flex-direction: column;
       padding: 20px 12px;
       z-index: 40;
       transition: width 0.3s ease-in-out;
     }
 
-    /* Hiện sidebar trên màn hình lớn */
+     /* Hiện sidebar trên màn hình lớn */
     @media (min-width: 1024px) {
       #sidebar-toggle:checked~.layout-container main {
         margin-left: 5rem;
       }
-    }
+    } 
 
     #admin-sidebar.hidden {
       display: none !important;
@@ -179,68 +175,74 @@
     - UI rendering handled in home.page.js
   -->
 
-<body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white transition-colors duration-300">
-  <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
-    <header
-      class="sticky top-0 z-50 flex items-center justify-between border-b border-solid border-slate-200 dark:border-[#29382f] bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md px-6 py-4 lg:px-10">
-      <div class="flex items-center gap-4">
-        <div class="flex h-10 w-10 items-center justify-center rounded-full bg-primary text-background-dark">
-          <span class="material-symbols-outlined">school</span>
+  <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white transition-colors duration-300">
+    <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
+      <header
+        class="sticky top-0 z-50 flex items-center justify-between border-b border-solid border-slate-200 dark:border-[#29382f] bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md px-6 py-4 lg:px-10">
+        <div class="flex items-center gap-4">
+          <div class="flex h-10 w-10 items-center justify-center rounded-full bg-primary text-background-dark">
+            <span class="material-symbols-outlined">school</span>
+          </div>
+          <h2 class="text-lg font-bold leading-tight tracking-[-0.015em] hidden sm:block">
+            VN-UK
+          </h2>
         </div>
-        <h2 class="text-lg font-bold leading-tight tracking-[-0.015em] hidden sm:block">
-          VN-UK
-        </h2>
-      </div>
 
-      <nav id="nav-menu" class="hidden md:flex items-center justify-center gap-8 flex-1">
-        <!-- JS render nav based on role (only for student) -->
-      </nav>
+        <nav id="nav-menu" class="hidden md:flex items-center justify-center gap-8 flex-1">
+  <a href="home.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium relative">
+    Home
+    <span class="absolute -bottom-1 left-0 w-full h-0.5 bg-primary scale-x-0 transition-transform origin-left group-hover:scale-x-100"></span>
+  </a>
+  <a href="student/my-event.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Events</a>
+  <a href="student/my-journey.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Journey</a>
+  <a href="student/profile.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Profile</a>
+</nav>
 
-      <div class="flex gap-3 relative">
-        <button
-          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
-          <span class="material-symbols-outlined text-[20px]">notifications</span>
-        </button>
-        <button id="settings-btn"
-          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
-          <span class="material-symbols-outlined text-[20px]">settings</span>
-        </button>
-        <div id="settings-dropdown" class="hidden">
-          <button id="logout-btn" class="block w-full text-left px-4 py-2 text-sm text-red-500 hover:bg-red-500/10">
-            Logout
+        <div class="flex gap-3 relative">
+          <button
+            class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+            <span class="material-symbols-outlined text-[20px]">notifications</span>
+          </button>
+          <button id="settings-btn"
+            class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+            <span class="material-symbols-outlined text-[20px]">settings</span>
+          </button>
+          <div id="settings-dropdown" class="hidden">
+            <button id="logout-btn" class="block w-full text-left px-4 py-2 text-sm text-red-500 hover:bg-red-500/10">
+              Logout
+            </button>
+          </div>
+          <button
+            class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white"
+              >
+              <span class="material-symbols-outlined text-[20px] theme-toggle-icon">light_mode</span>
+            </button>
+
+          <div class="h-8 w-px bg-gray-200 dark:bg-white/10 mx-2"></div>
+
+          <div id="admin-profile-header" class="flex items-center gap-3">
+            <div class="text-right hidden md:block">
+              <p id="admin-name" class="text-sm font-bold text-gray-900 dark:text-white leading-none">Admin User
+              </p>
+              <p id="admin-role-label" class="text-xs text-gray-500 dark:text-gray-400 mt-1 leading-none">Super
+                Admin</p>
+            </div>
+            <div id="admin-avatar" class="size-10 rounded-full bg-cover bg-center border-2 border-primary/20"
+              style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAclZlTCcV6pkP9D4Cx7Kil4TmKbWG_TXdXvXdoWqActcpmKPt_gKetEFolphy9rT6UCXi7Hk6V3lprVVU3Sv6DP1iDIrUyAzgNjycfvaLgynaPylK9D8osnTu_-276i47jD-VcxFFItt56oEoxFz0PVOdetayWkWj0nfO2ZXwW5QVzqCx6JtgtC4dAQmUtrbDCZbFpSMFOJvSrBxTdq3rqzC6_1CXvnewoSRq7GWAqoWc4e6bPmPO7IwAHbfLAvUhzWXzToWqdXuQ');">
+            </div>
+          </div>
+          <div id="student-profile-header" class="hidden flex items-center gap-2">
+            <div
+              class="size-10 rounded-full bg-slate-300 dark:bg-[#384b40] flex items-center justify-center text-slate-700 dark:text-white font-bold">
+              <span class="material-symbols-outlined">person</span>
+            </div>
+          </div>
+          <button id="sidebar-toggle-btn"
+            class="md:hidden flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] text-slate-700 dark:text-white">
+            <span class="material-symbols-outlined text-[20px]">menu</span>
           </button>
         </div>
-        <button
-          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white"
-            >
-            <span class="material-symbols-outlined text-[20px] theme-toggle-icon">light_mode</span>
-          </button>
-
-        <div class="h-8 w-px bg-gray-200 dark:bg-white/10 mx-2"></div>
-
-        <div id="admin-profile-header" class="flex items-center gap-3">
-          <div class="text-right hidden md:block">
-            <p id="admin-name" class="text-sm font-bold text-gray-900 dark:text-white leading-none">Admin User
-            </p>
-            <p id="admin-role-label" class="text-xs text-gray-500 dark:text-gray-400 mt-1 leading-none">Super
-              Admin</p>
-          </div>
-          <div id="admin-avatar" class="size-10 rounded-full bg-cover bg-center border-2 border-primary/20"
-            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAclZlTCcV6pkP9D4Cx7Kil4TmKbWG_TXdXvXdoWqActcpmKPt_gKetEFolphy9rT6UCXi7Hk6V3lprVVU3Sv6DP1iDIrUyAzgNjycfvaLgynaPylK9D8osnTu_-276i47jD-VcxFFItt56oEoxFz0PVOdetayWkWj0nfO2ZXwW5QVzqCx6JtgtC4dAQmUtrbDCZbFpSMFOJvSrBxTdq3rqzC6_1CXvnewoSRq7GWAqoWc4e6bPmPO7IwAHbfLAvUhzWXzToWqdXuQ');">
-          </div>
-        </div>
-        <div id="student-profile-header" class="hidden flex items-center gap-2">
-          <div
-            class="size-10 rounded-full bg-slate-300 dark:bg-[#384b40] flex items-center justify-center text-slate-700 dark:text-white font-bold">
-            <span class="material-symbols-outlined">person</span>
-          </div>
-        </div>
-        <button id="sidebar-toggle-btn"
-          class="md:hidden flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] text-slate-700 dark:text-white">
-          <span class="material-symbols-outlined text-[20px]">menu</span>
-        </button>
-      </div>
-    </header>
+      </header>
 
     <aside id="admin-sidebar">
       <div class="space-y-2">
@@ -297,14 +299,7 @@
                 24 hours!
               </p>
               <div class="flex gap-4 pt-2">
-                <button
-                  class="h-12 px-6 rounded-full bg-primary hover:bg-[#2ec569] text-background-dark font-bold text-base tracking-wide transition-all transform hover:scale-105">
-                  Register Now
-                </button>
-                <button
-                  class="h-12 px-6 rounded-full bg-white/10 hover:bg-white/20 backdrop-blur-sm text-white font-bold text-base tracking-wide border border-white/20 transition-all">
-                  Learn More
-                </button>
+                
               </div>
             </div>
           </div>
@@ -377,12 +372,7 @@
           </button>
         </div>
 
-        <div class="fixed bottom-8 right-8 hidden lg:flex z-40">
-          <button
-            class="h-14 w-14 rounded-full bg-primary hover:bg-[#2ec569] text-background-dark shadow-xl hover:shadow-glow transition-all flex items-center justify-center">
-            <span class="material-symbols-outlined text-3xl">chat_bubble</span>
-          </button>
-        </div>
+          
       </div>
     </main>
   </div>
