--- a/student/my-event.html
+++ b/student/my-event.html
@@ -1,197 +1,230 @@
 <!DOCTYPE html>
 <html class="dark" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>My Events - Student Portal</title>
 
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700&family=Noto+Sans:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <title>My Events - Student Portal</title>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com" rel="preconnect" />
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
+  <link href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+    rel="stylesheet" />
 
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+  <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 
-    <script id="tailwind-config">
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            colors: {
-              primary: "#36e27b",
-              "background-light": "#f6f8f7",
-              "background-dark": "#112117",
-              "card-dark": "#1c2621",
-              "input-dark": "#29382f",
-            },
-            fontFamily: {
-              display: ["Spline Sans", "sans-serif"],
-              body: ["Noto Sans", "sans-serif"],
-            },
-            borderRadius: {
-              DEFAULT: "1rem",
-              lg: "2rem",
-              xl: "3rem",
-              full: "9999px",
-            },
+  <script id="tailwind-config">
+    tailwind.config = {
+      darkMode: "class",
+      theme: {
+        extend: {
+          colors: {
+            primary: "#36e27b",
+            "background-light": "#f6f8f7",
+            "background-dark": "#112117",
+            "card-dark": "#1c2620",
+            "surface-dark": "#2a3630",
+          },
+          fontFamily: {
+            display: ["Spline Sans", "sans-serif"],
+          },
+          borderRadius: {
+            DEFAULT: "1rem",
+            lg: "1.5rem",
+            xl: "2rem",
+            "2xl": "2.5rem",
+            full: "9999px",
+          },
+          boxShadow: {
+            glow: "0 0 20px -5px rgba(54, 226, 123, 0.3)",
           },
         },
-      };
-    </script>
+      },
+    };
+  </script>
 
-    <style>
-      body {
-        font-family: "Spline Sans", "Noto Sans", sans-serif;
+  <style>
+    body {
+      font-family: "Spline Sans", sans-serif;
+    }
+
+    .material-symbols-outlined {
+      font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+    }
+
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: #112117;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #2a3630;
+      border-radius: 4px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #36e27b;
+    }
+
+    /* Sidebar Layout - giữ nguyên để tương lai dùng nếu cần */
+    #admin-sidebar {
+      position: fixed;
+      left: 0;
+      top: 5rem;
+      height: calc(100vh - 5rem);
+      width: 250px;
+      background-color: #112117 !important;
+      border-right: 1px solid #1c2620;
+      display: flex;
+      flex-direction: column;
+      padding: 20px 12px;
+      z-index: 40;
+      transition: width 0.3s ease-in-out;
+    }
+
+    #admin-sidebar.hidden {
+      display: none !important;
+    }
+
+    .nav-item {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 12px 16px;
+      color: #94a3b8;
+      text-decoration: none !important;
+      border-radius: 12px;
+      font-size: 14px;
+      font-weight: 500;
+      transition: all 0.2s;
+      margin-bottom: 4px;
+    }
+
+    .nav-item.active {
+      background-color: #163020 !important;
+      color: #34d399 !important;
+      font-weight: 700;
+    }
+
+    .nav-item:hover:not(.active) {
+      background-color: rgba(255, 255, 255, 0.05);
+      color: #fff;
+    }
+
+    .system-status {
+      margin-top: auto;
+      padding: 16px;
+      background: #0d1f14;
+      border-radius: 16px;
+      border: 1px solid #1a2e23;
+      margin-bottom: 10px;
+    }
+
+    @media (min-width: 1024px) {
+      .layout-container main {
+        margin-left: 16rem;
+        transition: margin-left 0.3s ease-in-out;
       }
-      /* Custom scrollbar */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #112117;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #29382f;
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #36e27b;
-      }
-    </style>
-  </head>
+    }
+
+    /* Dropdown for settings */
+    #settings-dropdown {
+      display: none;
+      position: absolute;
+      top: 100%;
+      right: 0;
+      background: #1c2620;
+      border: 1px solid #29382f;
+      border-radius: 8px;
+      padding: 8px;
+    }
+  </style>
+</head>
 
   <body
     class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white antialiased overflow-x-hidden"
   >
-    <div class="relative flex min-h-screen flex-col">
-      <div
-        class="w-full border-b border-[#29382f] bg-background-dark/95 backdrop-blur sticky top-0 z-50"
-      >
-        <div class="flex justify-center px-4 md:px-10 py-3">
-          <header
-            class="flex w-full max-w-[1200px] items-center justify-between whitespace-nowrap"
-          >
-            <a
-              href="../home.html"
-              class="flex items-center gap-4 text-white hover:opacity-80 transition-opacity"
-            >
-              <div class="size-8 text-primary">
-                <svg
-                  fill="none"
-                  viewbox="0 0 48 48"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g clip-path="url(#clip0_6_543)">
-                    <path d="M42.1739 20.1739L27.8261 5.82609C29.1366 7.13663
-                    28.3989 10.1876 26.2002 13.7654C24.8538 15.9564 22.9595
-                    18.3449 20.6522 20.6522C18.3449 22.9595 15.9564 24.8538
-                    13.7654 26.2002C10.1876 28.3989 7.13663 29.1366 5.82609
-                    27.8261L20.1739 42.1739C21.4845 43.4845 24.5355 42.7467
-                    28.1133 40.548C30.3042 39.2016 32.6927 37.3073 35 35C37.3073
-                    32.6927 39.2016 30.3042 40.548 28.1133C42.7467
-                    <path
-                      clip-rule="evenodd"
-                      d="M7.24189 26.4066C7.31369 26.4411 7.64204 26.5637 8.52504 26.3738C9.59462 26.1438 11.0343 25.5311 12.7183 24.4963C14.7583 23.2426 17.0256 21.4503 19.238 19.238C21.4503 17.0256 23.2426 14.7583 24.4963 12.7183C25.5311 11.0343 26.1438 9.59463 26.3738 8.52504C26.5637 7.64204 26.4411 7.31369 26.4066 7.24189C26.345 7.21246 26.143 7.14535 25.6664 7.1918C24.9745 7.25925 23.9954 7.5498 22.7699 8.14278C20.3369 9.32007 17.3369 11.4915 14.4142 14.4142C11.4915 17.3369 9.32007 20.3369 8.14278 22.7699C7.5498 23.9954 7.25925 24.9745 7.1918 25.6664C7.14534 26.143 7.21246 26.345 7.24189 26.4066ZM29.9001 10.7285C29.4519 12.0322 28.7617 13.4172 27.9042 14.8126C26.465 17.1544 24.4686 19.6641 22.0664 22.0664C19.6641 24.4686 17.1544 26.465 14.8126 27.9042C13.4172 28.7617 12.0322 29.4519 10.7285 29.9001L21.5754 40.747C21.6001 40.7606 21.8995 40.931 22.8729 40.7217C23.9424 40.4916 25.3821 39.879 27.0661 38.8441C29.1062 37.5904 31.3734 35.7982 33.5858 33.5858C35.7982 31.3734 37.5904 29.1062 38.8441 27.0661C39.879 25.3821 40.4916 23.9425 40.7216 22.8729C40.931 21.8995 40.7606 21.6001 40.747 21.5754L29.9001 10.7285ZM29.2403 4.41187L43.5881 18.7597C44.9757 20.1473 44.9743 22.1235 44.6322 23.7139C44.2714 25.3919 43.4158 27.2666 42.252 29.1604C40.8128 31.5022 38.8165 34.012 36.4142 36.4142C34.012 38.8165 31.5022 40.8128 29.1604 42.252C27.2666 43.4158 25.3919 44.2714 23.7139 44.6322C22.1235 44.9743 20.1473 44.9757 18.7597 43.5881L4.41187 29.2403C3.29027 28.1187 3.08209 26.5973 3.21067 25.2783C3.34099 23.9415 3.8369 22.4852 4.54214 21.0277C5.96129 18.0948 8.43335 14.7382 11.5858 11.5858C14.7382 8.43335 18.0948 5.9613 21.0277 4.54214C22.4852 3.8369 23.9415 3.34099 25.2783 3.21067C26.5973 3.08209 28.1187 3.29028 29.2403 4.41187Z"
-                      fill="currentColor"
-                      fill-rule="evenodd"
-                    ></path>
-                  </g>
-                  <defs>
-                    <clippath id="clip0_6_543">
-                      <rect fill="white" height="48" width="48"></rect>
-                    </clippath>
-                  </defs>
-                </svg>
-              </div>
-              <h2
-                class="text-white text-lg font-bold leading-tight tracking-[-0.015em] hidden sm:block"
-              >
-                VN-UK
-              </h2>
-            </a>
-
-            <div class="hidden md:flex flex-1 justify-center gap-8">
-              <a
-                class="text-gray-400 hover:text-white transition-colors text-sm font-medium leading-normal"
-                href="../home.html"
-                >Home</a
-              >
-              <a
-                class="text-primary text-sm font-bold leading-normal relative"
-                href="my-event.html"
-              >
-                My Events
-                <span
-                  class="absolute -bottom-5 left-0 w-full h-1 bg-primary rounded-t-lg shadow-[0_-2px_8px_rgba(54,226,123,0.5)]"
-                ></span>
-              </a>
-              <a
-                class="text-gray-400 hover:text-white transition-colors text-sm font-medium leading-normal"
-                href="my-journey.html"
-                >My Journey</a
-              >
-              <a
-                class="text-gray-400 hover:text-white transition-colors text-sm font-medium leading-normal"
-                href="profile.html"
-                >Profile</a
-              >
-            </div>
-
-            <div class="flex gap-2 relative">
-              <button
-                class="flex items-center justify-center rounded-full size-10 bg-[#29382f] text-white hover:bg-[#34463c] transition-colors"
-              >
-                <span class="material-symbols-outlined text-[20px]"
-                  >notifications</span
-                >
-              </button>
-              <button
-                id="settings-btn"
-                class="flex items-center justify-center rounded-full size-10 bg-[#29382f] text-white hover:bg-[#34463c] transition-colors"
-              >
-                <span class="material-symbols-outlined text-[20px]"
-                  >settings</span
-                >
-              </button>
-              <div
-                id="settings-dropdown"
-                class="hidden absolute top-full right-0 mt-2 bg-white dark:bg-[#1c2620] border border-gray-200 dark:border-[#29382f] rounded-lg shadow-xl min-w-[160px] py-1 z-50 opacity-0 transition-opacity duration-200"
-              >
-                <button
-                  id="logout-btn"
-                  class="w-full text-left px-4 py-2 text-sm text-red-500 hover:bg-red-500/10 flex items-center gap-2 transition-colors"
-                >
-                  <span class="material-symbols-outlined text-[20px]"
-                    >logout</span
-                  >
-                  Logout
-                </button>
-              </div>
-              <button
-                class="flex items-center justify-center rounded-full size-10 bg-[#29382f] text-white hover:bg-[#34463c] transition-colors"
-              >
-                <span class="material-symbols-outlined theme-toggle-icon"
-                  >light_mode</span
-                >
-              </button>
-            </div>
-          </header>
+    <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
+      <header
+      class="sticky top-0 z-50 flex items-center justify-between border-b border-solid border-slate-200 dark:border-[#29382f] bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md px-6 py-4 lg:px-10">
+      <div class="flex items-center gap-4">
+        <div class="flex h-10 w-10 items-center justify-center rounded-full bg-primary text-background-dark">
+          <span class="material-symbols-outlined">school</span>
         </div>
+        <h2 class="text-lg font-bold leading-tight tracking-[-0.015em] hidden sm:block">
+          VN-UK
+        </h2>
       </div>
+
+      <nav id="nav-menu" class="hidden md:flex items-center justify-center gap-8 flex-1">
+        <a href="../home.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Home</a>
+        <a href="my-event.html" class="text-primary font-bold relative">
+          My Events
+          <span class="absolute -bottom-1 left-0 w-full h-0.5 bg-primary"></span>
+        </a>
+        <a href="my-journey.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Journey</a>
+        <a href="profile.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Profile</a>
+      </nav>
+
+      <div class="flex gap-3 relative">
+        <button
+          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+          <span class="material-symbols-outlined text-[20px]">notifications</span>
+        </button>
+        <button id="settings-btn"
+          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+          <span class="material-symbols-outlined text-[20px]">settings</span>
+        </button>
+        <div id="settings-dropdown" class="hidden">
+          <button id="logout-btn" class="block w-full text-left px-4 py-2 text-sm text-red-500 hover:bg-red-500/10">
+            Logout
+          </button>
+        </div>
+        <button
+          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+          <span class="material-symbols-outlined text-[20px] theme-toggle-icon">light_mode</span>
+        </button>
+
+        <div class="h-8 w-px bg-gray-200 dark:bg-white/10 mx-2"></div>
+
+<!-- Avatar tròn xanh với chữ cái đầu tên người dùng -->
+<div class="flex items-center justify-center">
+  <div id="user-avatar-initial" 
+       class="size-10 rounded-full bg-primary text-background-dark flex items-center justify-center text-xl font-bold shadow-glow select-none">
+    A
+  </div>
+  <button id="sidebar-toggle-btn"
+            class="md:hidden flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] text-slate-700 dark:text-white">
+            <span class="material-symbols-outlined text-[20px]">menu</span>
+          </button>
+</div>
+
+        <!-- Admin profile giữ nguyên cấu trúc nhưng ẩn đi vì đây là trang student -->
+        <div id="admin-profile-header" class="hidden flex items-center gap-3">
+          <div class="text-right hidden md:block">
+            <p id="admin-name" class="text-sm font-bold text-gray-900 dark:text-white leading-none">Admin User</p>
+            <p id="admin-role-label" class="text-xs text-gray-500 dark:text-gray-400 mt-1 leading-none">Super Admin</p>
+          </div>
+          <div id="admin-avatar" class="size-10 rounded-full bg-cover bg-center border-2 border-primary/20"
+            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAclZlTCcV6pkP9D4Cx7Kil4TmKbWG_TXdXvXdoWqActcpmKPt_gKetEFolphy9rT6UCXi7Hk6V3lprVVU3Sv6DP1iDIrUyAzgNjycfvaLgynaPylK9D8osnTu_-276i47jD-VcxFFItt56oEoxFz0PVOdetayWkWj0nfO2ZXwW5QVzqCx6JtgtC4dAQmUtrbDCZbFpSMFOJvSrBxTdq3rqzC6_1CXvnewoSRq7GWAqoWc4e6bPmPO7IwAHbfLAvUhzWXzToWqdXuQ');">
+          </div>
+        </div>
+
+        <!-- Không có sidebar toggle vì đây là student portal, không có sidebar admin -->
+      </div>
+    </header>
 
       <main class="flex-1 flex justify-center py-10 px-4 md:px-10">
         <div class="w-full max-w-[1200px] flex flex-col gap-8">
           <div class="flex flex-wrap items-center justify-between gap-4">
             <div>
               <h1
-                class="text-white tracking-tight text-[32px] font-bold leading-tight"
+                class="text-slate-900 dark:text-white tracking-tight text-[32px] font-bold leading-tight"
               >
                 Active Tickets
               </h1>
