--- a/student/my-journey.html
+++ b/student/my-journey.html
@@ -1,201 +1,127 @@
 <!DOCTYPE html>
 <html class="dark" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>My Journey - Student Portal</title>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <title>My Journey - Student Portal</title>
 
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com" rel="preconnect" />
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
+  <link href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
-      rel="stylesheet"
-    />
+  <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-
-    <script id="tailwind-config">
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            colors: {
-              primary: "#36e27b",
-              "primary-dark": "#2ab863",
-              "background-light": "#f6f8f7",
-              "background-dark": "#111714",
-              "card-dark": "#1c2621",
-              "input-dark": "#29382f",
-              "text-muted": "#9eb7a8",
-            },
-            fontFamily: {
-              display: ["Spline Sans", "sans-serif"],
-              body: ["Noto Sans", "sans-serif"],
-            },
-            borderRadius: {
-              DEFAULT: "1rem",
-              lg: "1.5rem",
-              xl: "2rem",
-              "2xl": "2.5rem",
-              full: "9999px",
-            },
-            boxShadow: {
-              glow: "0 0 20px -5px rgba(54, 226, 123, 0.15)",
-            },
+  <script id="tailwind-config">
+    tailwind.config = {
+      darkMode: "class",
+      theme: {
+        extend: {
+          colors: {
+            primary: "#36e27b",
+            "background-light": "#f6f8f7",
+            "background-dark": "#112117",
+            "card-dark": "#1c2620",
+            "surface-dark": "#2a3630",
+          },
+          fontFamily: {
+            display: ["Spline Sans", "sans-serif"],
+          },
+          borderRadius: {
+            DEFAULT: "1rem",
+            lg: "1.5rem",
+            xl: "2rem",
+            "2xl": "2.5rem",
+            full: "9999px",
+          },
+          boxShadow: {
+            glow: "0 0 20px -5px rgba(54, 226, 123, 0.3)",
           },
         },
-      };
-    </script>
+      },
+    };
+  </script>
 
-    <style>
-      body {
-        font-family: "Spline Sans", sans-serif;
-      }
+  <style>
+    body { font-family: "Spline Sans", sans-serif; }
+    .material-symbols-outlined {
+      font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+    }
+    ::-webkit-scrollbar { width: 8px; }
+    ::-webkit-scrollbar-track { background: #112117; }
+    ::-webkit-scrollbar-thumb { background: #2a3630; border-radius: 4px; }
+    ::-webkit-scrollbar-thumb:hover { background: #36e27b; }
 
-      .material-symbols-outlined {
-        font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
-      }
-      .icon-filled {
-        font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
-      }
-
-      /* Custom scrollbar */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #112117;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #29382f;
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #36e27b;
-      }
-    </style>
-  </head>
+    /* Dropdown for settings */
+    #settings-dropdown {
+      display: none;
+      position: absolute;
+      top: 100%;
+      right: 0;
+      background: #1c2620;
+      border: 1px solid #29382f;
+      border-radius: 8px;
+      padding: 8px;
+    }
+  </style>
+</head>
 
   <body
     class="bg-background-light dark:bg-background-dark min-h-screen flex flex-col font-display text-slate-900 dark:text-white transition-colors duration-200"
   >
-    <header
-      class="sticky top-0 z-50 w-full border-b border-gray-200 dark:border-[#29382f] bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md"
-    >
-      <div class="max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="flex h-16 items-center justify-between">
-          <a
-            href="../home.html"
-            class="flex items-center gap-3 hover:opacity-80 transition-opacity"
-          >
-            <div class="size-8 text-primary">
-              <svg
-                class="w-full h-full"
-                fill="none"
-                viewbox="0 0 48 48"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M42.1739 20.1739L27.8261 5.82609C29.1366 7.13663 28.3989 10.1876 26.2002 13.7654C24.8538 15.9564 22.9595 18.3449 20.6522 20.6522C18.3449 22.9595 15.9564 24.8538 13.7654 26.2002C10.1876 28.3989 7.13663 29.1366 5.82609 27.8261L20.1739 42.1739C21.4845 43.4845 24.5355 42.7467 28.1133 40.548C30.3042 39.2016 32.6927 37.3073 35 35C37.3073 32.6927 39.2016 30.3042 40.548 28.1133C42.7467 24.5355 43.4845 21.4845 42.1739 20.1739Z"
-                  fill="currentColor"
-                ></path>
-                <path
-                  clip-rule="evenodd"
-                  d="M29.2403 4.41187L43.5881 18.7597C44.9757 20.1473 44.9743 22.1235 44.6322 23.7139C44.2714 25.3919 43.4158 27.2666 42.252 29.1604C40.8128 31.5022 38.8165 34.012 36.4142 36.4142C34.012 38.8165 31.5022 40.8128 29.1604 42.252C27.2666 43.4158 25.3919 44.2714 23.7139 44.6322C22.1235 44.9743 20.1473 44.9757 18.7597 43.5881L4.41187 29.2403C3.29027 28.1187 3.08209 26.5973 3.21067 25.2783C3.34099 23.9415 3.8369 22.4852 4.54214 21.0277C5.96129 18.0948 8.43335 14.7382 11.5858 11.5858C14.7382 8.43335 18.0948 5.9613 21.0277 4.54214C22.4852 3.8369 23.9415 3.34099 25.2783 3.21067C26.5973 3.08209 28.1187 3.29028 29.2403 4.41187Z"
-                  fill="currentColor"
-                  fill-opacity="0.5"
-                  fill-rule="evenodd"
-                ></path>
-              </svg>
-            </div>
-            <span class="text-lg font-bold tracking-tight">VN-UK</span>
-          </a>
+    <header class="sticky top-0 z-50 flex items-center justify-between border-b border-solid border-slate-200 dark:border-[#29382f] bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md px-6 py-4 lg:px-10">
+  <div class="flex items-center gap-4">
+    <div class="flex h-10 w-10 items-center justify-center rounded-full bg-primary text-background-dark">
+      <span class="material-symbols-outlined">school</span>
+    </div>
+    <h2 class="text-lg font-bold leading-tight tracking-[-0.015em] hidden sm:block">
+      VN-UK
+    </h2>
+  </div>
 
-          <nav class="hidden md:flex items-center gap-8">
-            <a
-              class="text-sm font-medium text-slate-600 dark:text-gray-300 hover:text-slate-900 dark:hover:text-white transition-colors"
-              href="../home.html"
-              >Home</a
-            >
-            <a
-              class="text-sm font-medium text-slate-600 dark:text-gray-300 hover:text-slate-900 dark:hover:text-white transition-colors"
-              href="my-event.html"
-              >My Events</a
-            >
+  <nav id="nav-menu" class="hidden md:flex items-center justify-center gap-8 flex-1">
+    <a href="../home.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Home</a>
+    <a href="my-event.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Events</a>
+    <a href="my-journey.html" class="text-primary font-bold relative">
+      My Journey
+      <span class="absolute -bottom-1 left-0 w-full h-0.5 bg-primary"></span>
+    </a>
+    <a href="profile.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Profile</a>
+  </nav>
 
-            <a
-              class="text-sm font-bold text-slate-900 dark:text-primary relative py-1"
-              href="my-journey.html"
-            >
-              My Journey
-              <span
-                class="absolute -bottom-1 left-0 w-full h-0.5 bg-primary rounded-full"
-              ></span>
-            </a>
-
-            <a
-              class="text-sm font-medium text-slate-600 dark:text-gray-300 hover:text-slate-900 dark:hover:text-white transition-colors"
-              href="profile.html"
-              >Profile</a
-            >
-          </nav>
-
-          <div class="flex items-center gap-3 relative">
-            <button
-              class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-slate-100 dark:hover:bg-white/10 text-slate-600 dark:text-gray-300 transition-colors"
-            >
-              <span class="material-symbols-outlined">notifications</span>
-            </button>
-            <button
-              id="settings-btn"
-              class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-slate-100 dark:hover:bg-white/10 text-slate-600 dark:text-gray-300 transition-colors"
-            >
-              <span class="material-symbols-outlined">settings</span>
-            </button>
-            <div
-              id="settings-dropdown"
-              class="hidden absolute top-full right-0 mt-2 bg-white dark:bg-[#1c2620] border border-gray-200 dark:border-[#29382f] rounded-lg shadow-xl min-w-[160px] py-1 z-50 opacity-0 transition-opacity duration-200"
-            >
-              <button
-                id="logout-btn"
-                class="w-full text-left px-4 py-2 text-sm text-red-500 hover:bg-red-500/10 flex items-center gap-2 transition-colors"
-              >
-                <span class="material-symbols-outlined text-[20px]"
-                  >logout</span
-                >
-                Logout
-              </button>
-            </div>
-            <button
-              class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-slate-100 dark:hover:bg-white/10 text-slate-600 dark:text-gray-300 transition-colors"
-            >
-              <span class="material-symbols-outlined theme-toggle-icon"
-                >light_mode</span
-              >
-            </button>
-            <button
-              class="md:hidden flex items-center justify-center w-10 h-10 rounded-full hover:bg-slate-100 dark:hover:bg-white/10 text-slate-600 dark:text-gray-300 transition-colors"
-            >
-              <span class="material-symbols-outlined">menu</span>
-            </button>
-            <button
-              class="md:hidden flex items-center justify-center w-10 h-10 rounded-full hover:bg-slate-100 dark:hover:bg-white/10 text-slate-600 dark:text-gray-300 transition-colors"
-            >
-              <span class="material-symbols-outlined">menu</span>
+  <div class="flex gap-3 relative">
+          <button
+            class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+            <span class="material-symbols-outlined text-[20px]">notifications</span>
+          </button>
+          <button id="settings-btn"
+            class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+            <span class="material-symbols-outlined text-[20px]">settings</span>
+          </button>
+          <div id="settings-dropdown" class="hidden">
+            <button id="logout-btn" class="block w-full text-left px-4 py-2 text-sm text-red-500 hover:bg-red-500/10">
+              Logout
             </button>
           </div>
-        </div>
-      </div>
-    </header>
+          <button
+            class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white"
+              >
+              <span class="material-symbols-outlined text-[20px] theme-toggle-icon">light_mode</span>
+            </button>
+
+          <div class="h-8 w-px bg-gray-200 dark:bg-white/10 mx-2"></div>
+
+          <div class="flex items-center justify-center">
+  <div id="user-avatar-initial" 
+       class="size-10 rounded-full bg-primary text-background-dark flex items-center justify-center text-xl font-bold shadow-glow select-none">
+    A
+  </div>
+  <button id="sidebar-toggle-btn"
+            class="md:hidden flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] text-slate-700 dark:text-white">
+            <span class="material-symbols-outlined text-[20px]">menu</span>
+          </button>
+</div> 
+</header>
 
     <main class="flex-grow">
       <div class="max-w-[960px] mx-auto px-4 py-8 md:px-8">
@@ -406,11 +332,7 @@
                   >
                   <span class="text-sm font-medium">Completed</span>
                 </div>
-                <button
-                  class="md:hidden group-hover:flex hidden absolute right-4 top-4 p-2 rounded-full hover:bg-slate-100 dark:hover:bg-white/10 text-slate-400 hover:text-primary transition-colors"
-                >
-                  <span class="material-symbols-outlined">arrow_forward</span>
-                </button>
+                
               </div>
             </div>
           </div>
