Update: qr-checkin

--- a/event-detail.html
+++ b/event-detail.html
@@ -58,28 +58,6 @@
         }
     </script>
     <style>
-        /* Tabs Logic */
-        #tab-overview:checked~.tab-content-overview,
-        #tab-qr:checked~.tab-content-qr {
-            display: block;
-            animation: fadeIn 0.3s ease-in-out;
-        }
-
-        /* Active Tab Styling */
-        #tab-overview:checked~.tabs-nav label[for="tab-overview"],
-        #tab-qr:checked~.tabs-nav label[for="tab-qr"] {
-            background-color: white;
-            color: #36e27b;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-        }
-
-        .dark #tab-overview:checked~.tabs-nav label[for="tab-overview"],
-        .dark #tab-qr:checked~.tabs-nav label[for="tab-qr"] {
-            background-color: #1c2621;
-            color: #36e27b;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
-        }
-
         /* Animations */
         @keyframes fadeIn {
             from {
@@ -105,8 +83,38 @@
             }
         }
 
+        @keyframes scaleIn {
+            from {
+                opacity: 0;
+                transform: scale(0.85);
+            }
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+
+        @keyframes scaleInModal {
+            from {
+                opacity: 0;
+                transform: scale(0.85);
+            }
+            to {
+                opacity: 1;
+                transform: scale(0.95);
+            }
+        }
+
         .ticket-qr.active {
             animation: glow 3s infinite;
+        }
+
+        .animate-scale-in {
+            animation: scaleIn 0.3s ease-out;
+        }
+
+        .animate-scale-in-modal {
+            animation: scaleInModal 0.3s ease-out forwards;
         }
 
         /* Sidebar style for admin */
@@ -224,25 +232,7 @@
     </aside>
 
     <main class="flex-grow w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6 lg:py-10">
-
-        <input checked="" class="hidden" id="tab-overview" name="event-tabs" type="radio" />
-        <input class="hidden" id="tab-qr" name="event-tabs" type="radio" />
-        <div class="flex justify-center mb-8 tabs-nav">
-            <div class="bg-surface-dark/5 dark:bg-white/5 p-1 rounded-full flex items-center relative">
-                <label
-                    class="cursor-pointer px-6 sm:px-8 py-2.5 rounded-full text-sm font-medium text-gray-500 hover:text-gray-900 dark:hover:text-gray-200 transition-all duration-200 select-none"
-                    for="tab-overview">
-                    General Overview
-                </label>
-                <label id="tab-qr-label"
-                    class="cursor-pointer px-6 sm:px-8 py-2.5 rounded-full text-sm font-medium text-gray-500 hover:text-gray-900 dark:hover:text-gray-200 transition-all duration-200 select-none flex items-center gap-2"
-                    for="tab-qr">
-                    <span class="material-symbols-outlined text-[18px]">confirmation_number</span>
-                    My Ticket
-                </label>
-            </div>
-        </div>
-        <div class="tab-content-overview hidden">
+        <div>
             <div
                 class="w-full relative rounded-2xl sm:rounded-3xl overflow-hidden aspect-[21/9] sm:aspect-[21/8] mb-8 group">
                 <div id="event-banner"
@@ -403,47 +393,6 @@
                 </div>
             </div>
         </div>
-        <div id="tab-qr-content" class="tab-content-qr hidden">
-            <!-- JS will render student or admin QR content here -->
-            <div
-                class="w-full h-full min-h-[500px] flex flex-col py-8 px-4 md:px-8 relative animate-in fade-in zoom-in duration-300">
-                <h2 id="ticket-header" class="text-2xl font-bold text-center mb-8 text-gray-900 dark:text-white"></h2>
-                <div class="flex-grow flex flex-col items-center justify-center gap-8 pb-10">
-                    <div
-                        class="bg-white dark:bg-[#1c2621] p-8 rounded-3xl shadow-2xl shadow-primary/30 border-4 border-primary/50 ticket-qr active max-w-md w-full">
-                        <svg class="w-full h-auto max-w-[300px] max-h-[300px] mx-auto" fill="none" viewBox="0 0 100 100"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <rect fill="white" height="100" width="100" x="0" y="0"></rect>
-                            <path fill="currentColor"
-                                d="M10 10h20v20h-20zM70 10h20v20h-20zM10 70h20v20h-20zM35 10h5v5h-5zM45 10h5v5h-5zM55 10h5v5h-5zM35 20h5v5h-5zM45 20h5v5h-5zM55 20h5v5h-5zM10 35h5v5h-5zM20 35h5v5h-5zM35 35h30v30h-30zM70 35h5v5h-5zM80 35h5v5h-5zM70 45h5v5h-5zM80 45h5v5h-5zM35 70h5v5h-5zM45 70h5v5h-5zM55 70h5v5h-5zM70 70h20v20h-20z" />
-                        </svg>
-                        <div class="relative mt-4">
-                            <input id="completion-qr-code-input"
-                                class="w-full text-center text-xl font-mono text-gray-900 dark:text-white placeholder-gray-400 bg-gray-100 dark:bg-black/20 border border-gray-200 dark:border-white/10 rounded-lg p-3 shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent cursor-default"
-                                readonly="" type="text"/>
-                        </div>
-                        <p
-                            class="text-center text-xs text-gray-500 dark:text-gray-400 font-medium uppercase tracking-widest mt-3">
-                            Student Ticket ID</p>
-                    </div>
-                </div>
-                <div class="w-full flex flex-col items-center gap-6 mb-6 max-w-md mx-auto">
-                    <button
-                        class="group flex items-center justify-center gap-2 px-6 py-3 rounded-xl bg-primary hover:bg-[#2fd16d] text-black font-bold text-base tracking-wide transition-all transform hover:scale-105 shadow-lg shadow-primary/25">
-                        <span
-                            class="material-symbols-outlined text-[24px] group-hover:rotate-45 transition-transform">qr_code_scanner</span>
-                        Scan QR to Finish
-                    </button>
-                    <p class="text-sm text-gray-500 dark:text-gray-400">If camera not working, enter code manually</p>
-                    <div class="flex w-full gap-2">
-                        <input type="text" placeholder="Enter code"
-                            class="flex-grow rounded-lg border border-gray-200 dark:border-white/10 bg-gray-50 dark:bg-black/20 p-3 text-sm focus:border-primary focus:ring-primary placeholder-gray-400">
-                        <button
-                            class="px-6 py-3 rounded-lg bg-primary text-black font-bold text-sm hover:bg-[#2fd16d] transition-all shadow-md">Submit</button>
-                    </div>
-                </div>
-            </div>
-        </div>
     </main>
     <footer class="mt-auto py-8 text-center text-gray-500 text-sm">
         <p>© 2023 Student Portal System. All rights reserved.</p>
@@ -558,6 +507,26 @@
         </div>
     </div>
 
+    <!-- QR CODE TICKET MODAL - Popup hiển thị Ticket QR Code -->
+    <div id="qr-ticket-modal" class="fixed inset-0 z-50 hidden items-center justify-center">
+        <!-- Overlay - Click để đóng popup -->
+        <div class="absolute inset-0 bg-black/50 backdrop-blur-sm" id="qr-ticket-modal-overlay"></div>
+
+        <!-- Modal box -->
+        <div class="relative z-10 flex items-center justify-center min-h-screen px-4 py-8">
+            <div class="bg-transparent w-full max-w-md relative">
+                <!-- Close button -->
+                <button id="close-qr-ticket-modal-btn" class="absolute -top-12 right-0 text-white hover:text-gray-200 transition-colors">
+                    <span class="material-symbols-outlined text-[32px]">close</span>
+                </button>
+                
+                <!-- Ticket container -->
+                <div id="qr-ticket-modal-content">
+                    <!-- Ticket sẽ được render vào đây -->
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script type="module" src="./js/pages/event-detail.page.js"></script>
 
