--- a/student/profile.html
+++ b/student/profile.html
@@ -80,7 +80,7 @@
 
   <nav id="nav-menu" class="hidden md:flex items-center justify-center gap-8 flex-1">
     <a href="../home.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Home</a>
-    <a href="my-event.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Events</a>
+    <a href="my-event.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Tickets</a>
     <a href="my-journey.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Journey</a>
     <a href="profile.html" class="text-primary font-bold relative">
       Profile
