--- a/event-detail.html
+++ b/event-detail.html
@@ -158,7 +158,7 @@
 
   <nav id="nav-menu" class="hidden md:flex items-center justify-center gap-8 flex-1">
     <a href="../home.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Home</a>
-    <a href="my-event.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Events</a>
+    <a href="my-event.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Tickets</a>
     <a href="my-journey.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Journey</a>
     <a href="profile.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Profile</a>
   </nav>
@@ -295,7 +295,7 @@
                                 <div class="pt-0.5">
                                     <h4 class="text-lg font-bold text-gray-400 dark:text-gray-500">Get Your Ticket</h4>
                                     <p class="text-sm text-gray-400 dark:text-gray-600 mt-1">A digital QR code will be
-                                        saved to "My Events".</p>
+                                        saved to "My Tickets".</p>
                                 </div>
                             </div>
                             <div class="relative flex items-start gap-6 mb-8 group">
